--- a/index.html
+++ b/index.html
@@ -1,49 +1,150 @@
 <!DOCTYPE html>
 <html>
-<head>
-   <title>MapLibre GL JS Terrain 3D</title>
-   <meta charset='utf-8'>
-   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-   <link rel='stylesheet' href='maplibre-gl.css' />
-   <style>
-       body { margin: 0; padding: 0; }
-       html, body, #map { height: 100%; }
-   </style>
-</head>
+  <head>
+    <title>MapLibre GL JS debug page</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=no"
+    />
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
 
-<body>
-<div id='map'></div>
+      html,
+      body,
+      #map {
+        height: 100%;
+      }
+    </style>
+  </head>
 
-<script src='maplibre-gl-dev.js'></script>
-<script>
+  <body>
+    <div id="map"></div>
 
-var map = window.map = new maplibregl.Map({
-    container: 'map',
-    zoom: 12.5,
-    center: [11.40416, 47.26475],
-    hash: true,
-    style: 'https://static.maptoolkit.net/styles/toursprung/terrain.json',
-    maxZoom: 18,
-    maxPitch: 85
-});
+    <script src="https://unpkg.com/maplibre-gl@2.2.0-pre.3/dist/maplibre-gl.js"></script>
+    <link
+      href="https://unpkg.com/maplibre-gl@2.2.0-pre.3/dist/maplibre-gl.css"
+      rel="stylesheet"
+    />
+    <script>
+      var map = (window.map = new maplibregl.Map({
+        container: "map",
+        zoom: 6,
+        center: [-69.482, 45.42],
+        pitch: 40,
+        hash: true,
+        style: {
+          version: 8,
+          sources: {
+            osm: {
+              type: "raster",
+              tiles: ["https://a.tile.openstreetmap.org/{z}/{x}/{y}.png"],
+              tileSize: 256,
+              attribution: "&copy; OpenStreetMap Contributors",
+              maxzoom: 19
+            },
+            terrain: {
+              type: "raster-dem",
+              url:
+                "https://api.maptiler.com/tiles/terrain-rgb/tiles.json?key=get_your_own_OpIi9ZULNHzrESv6T2vL",
+              tileSize: 256
+            }
+          },
 
-map.on('load', () => {
-    map.addSource('terrain', {
-        'type': 'raster-dem',
-        'tiles': ['https://vtc-cdn.maptoolkit.net/terrainrgb/{z}/{x}/{y}.webp'],
-        'encoding': 'mapbox',
-        'maxzoom': 14,
-        'minzoom': 4
-    });
-    map.addTerrain('terrain', {exaggeration: 0.33});
-});
+          glyphs: "https://demotiles.maplibre.org/font/{fontstack}/{range}.pbf",
+          layers: [
+            {
+              id: "osm",
+              type: "raster",
+              source: "osm"
+            },
+            {
+              id: "hills",
+              type: "hillshade",
+              source: "terrain",
+              layout: { visibility: "visible" },
+              paint: { "hillshade-exaggeration": 0.33 }
+            }
+          ],
+          terrain: {
+            source: "terrain",
+            exaggeration: 1
+          }
+        },
+        maxZoom: 18,
+        maxPitch: 85
+      }));
 
-map.on('click', e => {
-    new maplibregl.Marker().setLngLat(e.lngLat).addTo(map);
-});
+      map.addControl(
+        new maplibregl.NavigationControl({
+          visualizePitch: true,
+          showZoom: true,
+          showCompass: true
+        })
+      );
 
-map.addControl(new maplibregl.NavigationControl());
+      map.addControl(
+        new maplibregl.TerrainControl({
+          source: "terrain",
+          exaggeration: 1
+        })
+      );
 
-</script>
-</body>
+      map.on("load", () => {
+        map.addSource("maine", {
+          type: "geojson",
+          data: {
+            type: "Feature",
+            geometry: {
+              type: "Polygon",
+              coordinates: [
+                [
+                  [-67.13734351262877, 45.137451890638886],
+                  [-66.96466, 44.8097],
+                  [-68.03252, 44.3252],
+                  [-69.06, 43.98],
+                  [-70.11617, 43.68405],
+                  [-70.64573401557249, 43.090083319667144],
+                  [-70.75102474636725, 43.08003225358635],
+                  [-70.79761105007827, 43.21973948828747],
+                  [-70.98176001655037, 43.36789581966826],
+                  [-70.94416541205806, 43.46633942318431],
+                  [-71.08482, 45.3052400000002],
+                  [-70.6600225491012, 45.46022288673396],
+                  [-70.30495378282376, 45.914794623389355],
+                  [-70.00014034695016, 46.69317088478567],
+                  [-69.23708614772835, 47.44777598732787],
+                  [-68.90478084987546, 47.184794623394396],
+                  [-68.23430497910454, 47.35462921812177],
+                  [-67.79035274928509, 47.066248887716995],
+                  [-67.79141211614706, 45.702585354182816],
+                  [-67.13734351262877, 45.137451890638886]
+                ]
+              ]
+            }
+          }
+        });
+        map.addLayer({
+          id: "maine-line",
+          type: "line",
+          source: "maine"
+        });
+        map.addLayer({
+          id: "maine-text",
+          type: "symbol",
+          source: "maine",
+          layout: {
+            "text-field": "maine",
+            "symbol-placement": "line",
+            "text-pitch-alignment": "map",
+            "text-rotation-alignment": "map",
+            "text-size": 36
+          }
+        });
+      });
+    </script>
+  </body>
 </html>
