--- a/flyto.html
+++ b/flyto.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <title>Fly to a location</title>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
-    <script src='https://unpkg.com/maplibre-gl@2.2.0-pre.3/dist/maplibre-gl.js'></script>
-    <link rel='stylesheet' href='https://unpkg.com/maplibre-gl@2.2.0-pre.3/dist/maplibre-gl.css' />
+    <script src='https://unpkg.com/maplibre-gl@2.3.0/dist/maplibre-gl.js'></script>
+    <link rel='stylesheet' href='https://unpkg.com/maplibre-gl@2.3.0/dist/maplibre-gl.css' />
     <style>
         body {
             margin: 0;
