--- a/swisstopo.html
+++ b/swisstopo.html
@@ -4,7 +4,7 @@
    <title>MapLibre GL JS Terrain 3D - Swisstopo</title>
    <meta charset='utf-8'>
    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-   <link rel='stylesheet' href='https://unpkg.com/maplibre-gl@2.2.0-pre.3/dist/maplibre-gl.css' />
+   <link rel='stylesheet' href='https://unpkg.com/maplibre-gl@2.3.0/dist/maplibre-gl.css' />
    <style>
        body { margin: 0; padding: 0; }
        html, body, #map { height: 100%; }
@@ -14,7 +14,7 @@
 <body>
 <div id='map'></div>
 
-<script src='https://unpkg.com/maplibre-gl@2.2.0-pre.3/dist/maplibre-gl.js'></script>
+<script src='https://unpkg.com/maplibre-gl@2.3.0/dist/maplibre-gl.js'></script>
 <script>
 
 var map = window.map = new maplibregl.Map({
