--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
   <body>
     <div id="map"></div>
 
-    <script src="https://unpkg.com/maplibre-gl@2.3.0/dist/maplibre-gl.js"></script>
+    <script src="dist/maplibre-gl.js"></script>
     <link
-      href="https://unpkg.com/maplibre-gl@2.3.0/dist/maplibre-gl.css"
+      href="maplibre-gl.css"
       rel="stylesheet"
     />
     <script>
