--- a/osm-raster.html
+++ b/osm-raster.html
@@ -5,7 +5,7 @@
     <title>MapLibre GL JS Terrain 3D</title>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <link rel='stylesheet' href='https://unpkg.com/maplibre-gl@2.3.0/dist/maplibre-gl.css' />
+    <link rel='stylesheet' href='dist/maplibre-gl.css' />
     <style>
         body {
             margin: 0;
@@ -23,7 +23,7 @@
 <body>
     <div id='map'></div>
 
-    <script src='https://unpkg.com/maplibre-gl@2.3.0/dist/maplibre-gl.js'></script>
+    <script src='dist/maplibre-gl.js'></script>
     <script>
 
         var style = {
