Add swisstopo imagery

--- a/flyto.html
+++ b/flyto.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>Fly to a location</title>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
-    <script src='dist/maplibre-gl.js'></script>
+    <script src='https://unpkg.com/maplibre-gl@3.0.0-pre.3/dist/maplibre-gl.js'></script>
     <link rel='stylesheet' href='dist/maplibre-gl.css' />
     <style>
         body {
