--- a/osm-raster.html
+++ b/osm-raster.html
@@ -23,7 +23,7 @@
 <body>
     <div id='map'></div>
 
-    <script src='dist/maplibre-gl.js'></script>
+    <script src='https://unpkg.com/maplibre-gl@3.0.0-pre.3/dist/maplibre-gl.js'></script>
     <script>
 
         var style = {
