--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
     <div id="map"></div>
 
-    <script src="dist/maplibre-gl.js"></script>
+    <script src="https://unpkg.com/maplibre-gl@3.0.0-pre.3/dist/maplibre-gl.js"></script>
     <link
       href="maplibre-gl.css"
       rel="stylesheet"
